[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"
eyre = "0.6"
thiserror = "1.0.30"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

common = { path = "../common" }

[dependencies.sea-orm]
version = "0.4"
default-features = false
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] 

[dev-dependencies]
pretty_assertions = "1"
