[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew", rev = "996bf5" } 
yew-agent = { git = "https://github.com/yewstack/yew", rev = "996bf5" } 
web-sys = { version = "0.3.55", features = ["HtmlElement", "InputEvent"]}
reqwasm = "0.3.1"
gloo-events = "0.1"
gloo-storage = "0.2"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

common = { path = "../common", features = ["wasm"] }

